[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "transformers>=4.57.3",
]
